--- a/_posts/2021-05-05-Azure-CAF-101.md
+++ b/_posts/2021-05-05-Azure-CAF-101.md
@@ -1,2 +1,6 @@
+---
+layout: post
+title: Azure Cloud Adoption Framework (CAF) 101
+---
 #Foundation
 ![Foundation Architect](https://docs.microsoft.com/en-us/azure/governance/blueprints/media/caf-blueprints/caf-foundation-architecture.png)
