--- a/_posts/2021-05-05-Azure-CAF-101.md
+++ b/_posts/2021-05-05-Azure-CAF-101.md
@@ -2,5 +2,8 @@
 layout: post
 title: Azure Cloud Adoption Framework (CAF) 101
 ---
-#Foundation
+# Foundation
+
 ![Foundation Architect](https://docs.microsoft.com/en-us/azure/governance/blueprints/media/caf-blueprints/caf-foundation-architecture.png)
+
+# Adding Hub-Spoke network architect
